# x-deploy

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  auth.json  env.local  test_cli.sh
.github/workflows/: test-run.yml
kafka/: state.yaml
ovh-api/: Cargo.toml
ovh-api/src/: lib.rs
ovh-api/src/data/: account.rs  kbs_cluster.rs  kbs_kubeconfig.rs  mod.rs  project.rs
ovh-api/src/error/: error.rs  mod.rs  requester.rs
ovh-api/src/route/: account.rs  cloud.rs  mod.rs
x-deploy-api/: Cargo.toml
x-deploy-api/src/: config.rs  error.rs  main.rs  utils.rs
x-deploy-api/src/catcher/: mod.rs
x-deploy-api/src/cipher/: mod.rs  password.rs  token.rs  two_factor.rs
x-deploy-api/src/config/: mod.rs
x-deploy-api/src/db/: mod.rs  organization.rs  organization_apikey.rs  organization_custom_role.rs  organization_invitation.rs  organization_member.rs  ovh_credentials.rs  project.rs  user.rs
x-deploy-api/src/db/query/: mod.rs
x-deploy-api/src/db/query/organization/: mod.rs
x-deploy-api/src/db/query/organization_invitation/: mod.rs
x-deploy-api/src/db/query/organization_member/: mod.rs
x-deploy-api/src/db/query/project/: mod.rs
x-deploy-api/src/db/query/user/: email.rs  mod.rs  password.rs  phone.rs  two_factor.rs
x-deploy-api/src/doc/: security.rs
x-deploy-api/src/error/: mod.rs
x-deploy-api/src/event/: mod.rs  organization.rs  user.rs
x-deploy-api/src/fairing/: cors.rs
x-deploy-api/src/guard/: api_key.rs  auth.rs  bearer_token.rs  mod.rs  profile_picture.rs  token.rs
x-deploy-api/src/kbs/: deploy.rs  mod.rs
x-deploy-api/src/oauth/: mod.rs
x-deploy-api/src/oauth/github/: data.rs  mod.rs
x-deploy-api/src/oauth/gitlab/: data.rs  mod.rs
x-deploy-api/src/oauth/google/: data.rs  mod.rs
x-deploy-api/src/ovh/auth/: mod.rs
x-deploy-api/src/permission/: cluster.rs  general.rs  mod.rs
x-deploy-api/src/responder/: mod.rs
x-deploy-api/src/route/: auth.rs  deploy.rs  mod.rs
x-deploy-api/src/route/account/: controller.rs  dto.rs  mod.rs
x-deploy-api/src/route/account/api_key/: mod.rs
x-deploy-api/src/route/auth/: controller.rs  dto.rs  mod.rs
x-deploy-api/src/route/cloud_provider/: controller.rs  dto.rs  mod.rs
x-deploy-api/src/route/cloud_provider/aws/: controller.rs  dto.rs  mod.rs
x-deploy-api/src/route/cloud_provider/ovh/: mod.rs
x-deploy-api/src/route/invitation/: controller.rs  dto.rs  mod.rs
x-deploy-api/src/route/organization/: controller.rs  dto.rs  mod.rs
x-deploy-api/src/route/organization/api_key/: controller.rs  dto.rs  mod.rs
x-deploy-api/src/route/organization/aws/: mod.rs
x-deploy-api/src/route/organization/azure/: mod.rs
x-deploy-api/src/route/organization/credentials/: mod.rs
x-deploy-api/src/route/organization/credentials/aws/: controller.rs  dto.rs  mod.rs
x-deploy-api/src/route/organization/credentials/azure/: mod.rs
x-deploy-api/src/route/organization/credentials/docker_hub/: controller.rs  dto.rs  mod.rs
x-deploy-api/src/route/organization/credentials/google_cloud/: mod.rs
x-deploy-api/src/route/organization/credentials/ovh/: controller.rs  dto.rs  mod.rs
x-deploy-api/src/route/organization/custom_role/: controller.rs  dto.rs  mod.rs
x-deploy-api/src/route/organization/gc/: mod.rs
x-deploy-api/src/route/organization/invitation/: controller.rs  dto.rs  mod.rs
x-deploy-api/src/route/organization/member/: controller.rs  dto.rs  mod.rs
x-deploy-api/src/route/organization/ovh/: mod.rs
x-deploy-api/src/route/organization/project/: controller.rs  dto.rs  mod.rs
x-deploy-api/src/route/organization/project/cluster/: controller.rs  dto.rs  mod.rs
x-deploy-api/src/route/organization/project/deployment/: mod.rs
x-deploy-api/src/route/organization/project/environment/: mod.rs
x-deploy-api/src/route/organization/role/: controller.rs  dto.rs  mod.rs
x-deploy-api/src/route/ovh/: dto.rs  mod.rs
x-deploy-api/src/route/project/: dto.rs  mod.rs
x-deploy-api/src/utils/: api_key.rs  mod.rs  object_id.rs  profile_picture.rs  two_factor.rs
x-deploy-cli/: Cargo.toml
x-deploy-cli/src/: error.rs  main.rs
x-deploy-cli/src/auth/: mod.rs
x-deploy-cli/src/cmd/: mod.rs
x-deploy-cli/src/executor/: login.rs  logout.rs  mod.rs  organization.rs
x-deploy-client/: Cargo.toml
x-deploy-client/src/: error.rs  lib.rs
x-deploy-client/src/auth/: dto.rs  mod.rs
x-deploy-client/src/organization/: dto.rs  mod.rs
x-deploy-common/: Cargo.toml
x-deploy-common/src/: lib.rs
x-deploy-common/src/data/: cloud_provider.rs  mod.rs
x-deploy-common/src/db/: mod.rs  organization.rs  organization_apikey.rs  organization_credential_aws.rs  organization_credential_docker_hub.rs  organization_credential_ovh.rs  organization_invitation.rs  organization_member.rs  organization_project.rs  organization_project_cluster.rs  organization_project_deployment.rs  organization_project_environment.rs  organization_role.rs  ovh_credentials.rs  project.rs  user.rs
x-deploy-common/src/db/query/: mod.rs  organization.rs  organization_api_key.rs  organization_invitation.rs  organization_member.rs
x-deploy-common/src/db/query/organisation_credential_docker_hub/: mod.rs
x-deploy-common/src/db/query/organization/: mod.rs
x-deploy-common/src/db/query/organization_credential_aws/: mod.rs
x-deploy-common/src/db/query/organization_invitation/: mod.rs
x-deploy-common/src/db/query/organization_member/: mod.rs
x-deploy-common/src/db/query/organization_role/: mod.rs
x-deploy-common/src/db/query/project/: mod.rs
x-deploy-common/src/db/query/user/: email.rs  mod.rs  password.rs  phone.rs  two_factor.rs
x-deploy-common/src/event/: mod.rs  organization.rs  user.rs
x-deploy-common/src/s3/: bucket.rs  config.rs  file_type.rs  mod.rs
x-deploy-daemon/: Cargo.toml
x-deploy-daemon/src/: error.rs  main.rs
x-deploy-daemon/src/cluster/: mod.rs
x-deploy-daemon/src/cluster/aws/: install.rs  mod.rs  role.rs
x-deploy-daemon/src/config/: mod.rs
x-deploy-daemon/src/event/: user.rs
x-deploy-ws/: Cargo.toml
x-deploy-ws/src/: main.rs
xdeploy-api/: Cargo.toml
xdeploy-api/src/: main.rs
xdeploy-api/src/kbs/: mod.rs
