[workspace]

resolver = "2"

members = [
    "x-deploy-api",
    "x-deploy-client",
    "x-deploy-cli",
    "x-deploy-daemon",
    "x-deploy-common",
    "x-deploy-ws",
]

[workspace.dependencies]
futures = { version = "0.3.29" }
serde = { version = "1.0.147" }
serde_json = { version = "1.0.107" }
tokio = { version = "1.32.0" }
reqwest = { version = "0.11.23" }
