[package]
name = "ovh-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
tokio = {version = "1.34.0", features = ["full"]}
serde_json = "1.0.108"
dotenv = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }