[package]
name = "x-deploy-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.10.0" }
rocket = { version = "0.5.0", features = ["json"] }
utoipa = { version = "4.1.0", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["rocket"] }
utoipa-redoc = { version = "2.0.0", features = ["rocket"] }
ovh-api = { path = "../ovh-api" }
serde_yaml = { version = "0.9.27" }
serde = { workspace = true, features = ["derive"] }
kube = { version = "0.87.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
dotenv = { version = "0.15.0" }
mongodb = { version = "2.7.1", features = ["tokio-sync"] }
bson = { version = "2.7.0" }
redis = { version = "0.24.0" }
jsonwebtoken = { version = "9.1.0" }
bcrypt = { version = "0.15.0" }
lazy_static = { version = "1.4.0" }
log = { version = "0.4.20" }
serde_json = { workspace = true }
