[package]
name = "x-deploy-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.8", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
x-deploy-client = { path = "../x-deploy-client" }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
