[package]
name = "xdeploy-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
ovh-api = {path = "../ovh-api"}
rocket_okapi = {version = "0.8.0-rc.3", features = ["rapidoc", "swagger"]}
dotenv = "0.15.0"
kube = { version = "0.87.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
